z-Index fix and switch to getBody for iframe tinymce

--- a/src/equation_editor.css
+++ b/src/equation_editor.css
@@ -166,3 +166,7 @@
 .equation-editor .math {
   width: 100%;
 }
+
+.popover {
+  z-index: 65541;
+}
